[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clink"
version = "0.1.0"
description = "A Django-based finance management application"
requires-python = ">=3.13"
dependencies = [
    "django~=5.2",
    "psycopg2-binary~=2.9.9",
    "pydantic<3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]

[tool.setuptools]
packages = ["app"]
