[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clink"
version = "0.1.0"
description = "A Django-based finance management application"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.2,<6.0",
    "django~=5.2",
    "django-celery-beat>2.5,<3.0",
    "django-celery-results>2.5,<3.0",
    "django-constance>=4.0,<5.0",
    "gunicorn~=23.0",
    "psycopg2-binary~=2.9.9",
    "pydantic<3",
    "redis>=6.0,<8.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]

[tool.setuptools]
packages = ["app"]
